LPS-73701 messaging-test SF