@@ -59,15 +59,18 @@ public class OutboundMessageProcessorFactoryTest extends TestUtil {
 		final Deferred<Integer> beforeSend = new Deferred<>();
 		final Deferred<Integer> called = new Deferred<>();
 
-		OutboundMessageProcessor outboundMessageProcessor = new OutboundMessageProcessor() {
+		OutboundMessageProcessor outboundMessageProcessor =
+		new OutboundMessageProcessor() {
 
 			@Override
-			public void afterSend(Message message) throws MessageProcessorException {
+			public void afterSend(Message message)
+				throws MessageProcessorException {
 				afterSend.resolve(3);
 			}
 
 			@Override
-			public Message beforeSend(Message message) throws MessageProcessorException {
+			public Message beforeSend(Message message)
+				throws MessageProcessorException {
 				beforeSend.resolve(2);
 
 				return message;
@@ -75,7 +78,8 @@ public class OutboundMessageProcessorFactoryTest extends TestUtil {
 
 		};
 
-		OutboundMessageProcessorFactory factory = new OutboundMessageProcessorFactory() {
+		OutboundMessageProcessorFactory factory =
+		new OutboundMessageProcessorFactory() {
 
 			@Override
 			public OutboundMessageProcessor create() {
@@ -90,9 +94,10 @@ public class OutboundMessageProcessorFactoryTest extends TestUtil {
 
 		properties.put("destination.name", destination);
 
-		ServiceRegistration<OutboundMessageProcessorFactory> serviceRegistration =
-			bundleContext.registerService(
-				OutboundMessageProcessorFactory.class, factory, properties);
+		ServiceRegistration<OutboundMessageProcessorFactory>
+			serviceRegistration =
+				bundleContext.registerService(
+					OutboundMessageProcessorFactory.class, factory, properties);
 
 		try {
 			tbBundle.start();
@@ -113,9 +118,9 @@ public class OutboundMessageProcessorFactoryTest extends TestUtil {
 
 			messageBus.sendMessage(destination, message);
 
-			assertEquals(new Integer(1), promiseToCalled.getValue());
-			assertEquals(new Integer(2), promiseToBeforeSend.getValue());
-			assertEquals(new Integer(3), promiseToAfterSend.getValue());
+			assertEquals(Integer.valueOf(1), promiseToCalled.getValue());
+			assertEquals(Integer.valueOf(2), promiseToBeforeSend.getValue());
+			assertEquals(Integer.valueOf(3), promiseToAfterSend.getValue());
 
 			tbBundle.uninstall();
 		}
